--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "with-rematch",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.9.11",
-    "@rematch/core": "^1.1.0",
-    "@turf/bezier-spline": "^6.0.3",
-    "@turf/helpers": "^6.1.4",
-    "@types/material-ui": "^0.21.7",
-    "@types/react-redux": "^7.1.7",
-    "@types/yandex-maps": "^2.1.9",
-    "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.19.2",
-    "isomorphic-unfetch": "^3.0.0",
-    "leaflet": "^1.6.0",
-    "leaflet-rotatedmarker": "^0.2.0",
-    "lodash": "^4.17.15",
-    "next": "latest",
-    "next-images": "^1.4.0",
-    "react": "^16.8.4",
-    "react-awesome-reveal": "^2.4.2",
-    "react-dadata-suggestions": "^2.0.0",
-    "react-dom": "^16.8.4",
-    "react-image-magnifiers": "^1.3.1",
-    "react-input-mask": "^2.0.4",
-    "react-lazy-load-image-component": "^1.4.3",
-    "react-leaflet": "^2.6.3",
-    "react-leaflet-universal": "^2.2.1",
-    "react-redux": "^6.0.1",
-    "react-reveal": "^1.2.2",
-    "react-yandex-maps": "^4.3.0",
-    "react-yandex-metrika": "^2.6.0",
-    "redux": "^4.0.1",
-    "sass": "^1.26.3",
-    "swr": "^0.2.0",
-    "unfetch": "^4.1.0"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^13.13.0",
-    "@types/react": "^16.9.34",
-    "typescript": "^3.8.3"
-  }
+	"name": "lesnaya-gavan",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@material-ui/core": "^4.9.11",
+		"@rematch/core": "^1.1.0",
+		"@turf/bezier-spline": "^6.0.3",
+		"@turf/helpers": "^6.1.4",
+		"@types/material-ui": "^0.21.7",
+		"@types/react-redux": "^7.1.7",
+		"@types/yandex-maps": "^2.1.9",
+		"@zeit/next-sass": "^1.0.1",
+		"axios": "^0.19.2",
+		"classnames": "^2.2.6",
+		"isomorphic-unfetch": "^3.0.0",
+		"leaflet": "^1.6.0",
+		"leaflet-rotatedmarker": "^0.2.0",
+		"lodash": "^4.17.15",
+		"next": "latest",
+		"next-images": "^1.4.0",
+		"react": "^16.8.4",
+		"react-awesome-reveal": "^2.4.2",
+		"react-dadata-suggestions": "^2.0.0",
+		"react-dom": "^16.8.4",
+		"react-image-magnifiers": "^1.3.1",
+		"react-input-mask": "^2.0.4",
+		"react-lazy-load-image-component": "^1.4.3",
+		"react-leaflet": "^2.6.3",
+		"react-leaflet-universal": "^2.2.1",
+		"react-motion": "^0.5.2",
+		"react-redux": "^6.0.1",
+		"react-reveal": "^1.2.2",
+		"react-yandex-maps": "^4.3.0",
+		"react-yandex-metrika": "^2.6.0",
+		"redux": "^4.0.1",
+		"sass": "^1.26.3",
+		"swr": "^0.2.0",
+		"unfetch": "^4.1.0"
+	},
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^13.13.0",
+		"@types/react": "^16.9.34",
+		"typescript": "^3.8.3"
+	}
 }
