--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.9.11",
 		"@rematch/core": "^1.1.0",
+		"@sendgrid/mail": "^7.0.1",
 		"@turf/bezier-spline": "^6.0.3",
 		"@turf/helpers": "^6.1.4",
 		"@types/material-ui": "^0.21.7",
@@ -17,6 +18,7 @@
 		"@zeit/next-sass": "^1.0.1",
 		"axios": "^0.19.2",
 		"classnames": "^2.2.6",
+		"dotenv": "^8.2.0",
 		"isomorphic-unfetch": "^3.0.0",
 		"leaflet": "^1.6.0",
 		"leaflet-rotatedmarker": "^0.2.0",
