--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@sendgrid/mail": "^7.0.1",
 		"@turf/bezier-spline": "^6.0.3",
 		"@turf/helpers": "^6.1.4",
+		"@types/classnames": "^2.2.10",
 		"@types/material-ui": "^0.21.7",
 		"@types/react-redux": "^7.1.7",
 		"@types/yandex-maps": "^2.1.9",
