--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
 		"@turf/helpers": "^6.1.4",
 		"@types/classnames": "^2.2.10",
 		"@types/material-ui": "^0.21.7",
+		"@types/nodemailer": "^6.4.0",
 		"@types/react-redux": "^7.1.7",
 		"@types/yandex-maps": "^2.1.9",
 		"@zeit/next-sass": "^1.0.1",
 		"axios": "^0.19.2",
+		"body-parser": "^1.19.0",
 		"classnames": "^2.2.6",
 		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
 		"isomorphic-unfetch": "^3.0.0",
 		"leaflet": "^1.6.0",
 		"leaflet-rotatedmarker": "^0.2.0",
 		"lodash": "^4.17.15",
 		"next": "latest",
 		"next-images": "^1.4.0",
+		"nodemailer": "^6.4.6",
 		"react": "^16.8.4",
 		"react-awesome-reveal": "^2.4.2",
 		"react-dadata-suggestions": "^2.0.0",
