--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"leaflet": "^1.6.0",
 		"leaflet-rotatedmarker": "^0.2.0",
 		"lodash": "^4.17.15",
-		"next": "latest",
+		"next": "^9.3.6",
 		"next-images": "^1.4.0",
 		"nodemailer": "^6.4.6",
 		"react": "^16.8.4",
