--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"axios": "^0.19.2",
 		"body-parser": "^1.19.0",
 		"classnames": "^2.2.6",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"isomorphic-unfetch": "^3.0.0",
@@ -30,6 +31,7 @@
 		"next": "^9.3.6",
 		"next-images": "^1.4.0",
 		"nodemailer": "^6.4.6",
+		"nodemailer-sendgrid-transport": "^0.2.0",
 		"react": "^16.8.4",
 		"react-awesome-reveal": "^2.4.2",
 		"react-dadata-suggestions": "^2.0.0",
