--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"dev": "next",
 		"build": "next build",
-		"start": "next start"
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.9.11",
