--- a/package.json
+++ b/package.json
@@ -21,31 +21,23 @@
 		"axios": "^0.19.2",
 		"body-parser": "^1.19.0",
 		"classnames": "^2.2.6",
-		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"isomorphic-unfetch": "^3.0.0",
-		"leaflet": "^1.6.0",
-		"leaflet-rotatedmarker": "^0.2.0",
 		"lodash": "^4.17.15",
 		"next": "^9.3.6",
 		"next-images": "^1.4.0",
+		"next-ym": "^2.3.5",
 		"nodemailer": "^6.4.6",
-		"nodemailer-sendgrid-transport": "^0.2.0",
 		"react": "^16.8.4",
 		"react-awesome-reveal": "^2.4.2",
-		"react-dadata-suggestions": "^2.0.0",
 		"react-dom": "^16.8.4",
 		"react-image-magnifiers": "^1.3.1",
 		"react-input-mask": "^2.0.4",
 		"react-lazy-load-image-component": "^1.4.3",
-		"react-leaflet": "^2.6.3",
-		"react-leaflet-universal": "^2.2.1",
 		"react-motion": "^0.5.2",
 		"react-redux": "^6.0.1",
-		"react-reveal": "^1.2.2",
 		"react-yandex-maps": "^4.3.0",
-		"react-yandex-metrika": "^2.6.0",
 		"redux": "^4.0.1",
 		"sass": "^1.26.3",
 		"swr": "^0.2.0",
