--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 		"@turf/bezier-spline": "^6.0.3",
 		"@turf/helpers": "^6.1.4",
 		"@types/classnames": "^2.2.10",
+		"@types/lodash": "^4.14.150",
 		"@types/material-ui": "^0.21.7",
 		"@types/nodemailer": "^6.4.0",
+		"@types/react-input-mask": "^2.0.5",
+		"@types/react-motion": "^0.0.29",
 		"@types/react-redux": "^7.1.7",
 		"@types/yandex-maps": "^2.1.9",
 		"@zeit/next-sass": "^1.0.1",
