--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
 		"lodash": "^4.17.15",
 		"next": "^9.3.6",
 		"next-images": "^1.4.0",
-		"next-ym": "^2.3.5",
 		"nodemailer": "^6.4.6",
 		"react": "^16.8.4",
 		"react-awesome-reveal": "^2.4.2",
 		"react-dom": "^16.8.4",
+		"react-gtm-module": "^2.0.8",
 		"react-image-magnifiers": "^1.3.1",
 		"react-input-mask": "^2.0.4",
 		"react-lazy-load-image-component": "^1.4.3",
