--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"lodash": "^4.17.15",
 		"next": "^9.3.6",
 		"next-images": "^1.4.0",
+		"nextjs-sitemap-generator": "^1.0.0",
 		"nodemailer": "^6.4.6",
 		"react": "^16.8.4",
 		"react-awesome-reveal": "^2.4.2",
