--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"axios": "^0.19.2",
 		"body-parser": "^1.19.0",
 		"classnames": "^2.2.6",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"isomorphic-unfetch": "^3.0.0",
